Home page UI changes updated

--- a/public/app/partials/home/home.html
+++ b/public/app/partials/home/home.html
@@ -30,26 +30,21 @@
                 </div>
 
                 <div class="col-md-4" >
-                <a href="#wopportunity" style="text-decoration:none;"><h1 style="font-size:22px;margin-bottom:10px;margin-top:10px;background-color:#FFFFFF" id="step3" data-target="#step3" data-toggle="tab" data-slide-to="2">Jobs</h1>
-                <p style="text-align: justify;font-size:15px;"></a>
-                <!-- <a href="#streamit" style="text-decoration:none;">Evezown</a> -->
+                <a href="#wopportunity" style="text-decoration:none;"><h1 style="font-size:22px;margin-bottom:10px;margin-top:10px;background-color:#FFFFFF" id="step3" data-target="#step3" data-toggle="tab" data-slide-to="2">Jobs</h1></a>
+                <p style="text-align: justify;font-size:15px;">
                     <img src="img/jobs.jpg" class="description-img" width="150" height="90" style="border: 2px solid #FFFFFF;"/>
                     This is resourcing platform. If you are in business, you can use it for hiring talent. As a working professional you can use this platform to find an opportunity of your choice. Customized categorization helps you identify suitable opportunity.</p>
                 </div>
 
                 <div class="col-md-12">
-                    <div class="col-md-4 zero-left-padding">
+                    <div class="col-md-8 zero-left-padding">
                         <!-- <p id="eye-buy"><i>Explore Evezown.com. Make it your own place!</i></p> -->
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-2">
                         <button class="btn btn-lg btn-primary pull-right" ng-click="CallMe();" style="margin-top:10px;">Take a Tour</button>
                     </div>
-                    <div class="col-md-4" ng-hide="loggedIn">
+                    <div class="col-md-2">
                         <a class="btn btn-lg btn-primary pull-right" href="#requestinvite" role="button" style="margin-top:10px;"> Signup &raquo;</a>
-                    </div>
-                    <div class="col-md-4" ng-if="loggedIn">
-                        <a class="btn btn-lg btn-primary pull-right" href="#community" role="button">Build
-                            Community &raquo;</a>
                     </div>
                 </div>
             </div>
