Added payment gateway terms and cond.
Added payment gateway terms and cond.

--- a/public/app/partials/evezplace/manage/store/commerce_engine.html
+++ b/public/app/partials/evezplace/manage/store/commerce_engine.html
@@ -30,11 +30,18 @@
                     <div class="form-group">
                         <div class="col-md-offset-1 col-md-5">
                             <h5 style="font-weight: 600">Do you need Payment Gateway?</h5>
-
-                            <p>(2% of the transaction fee would
-                                be charged your account)</p>
-                            <a href="#payment_terms_and_condition" target="_blank" style="color: #e51385">click here to know terms and conditions</a>
+							<h5 style="font-weight: 600">Transaction Fee</h5>
+                            <p>Credit Card Transaction : 2.9%</br>
+                               Debit Card Transactoion : 2.9%</br>
+                               Net Banking Transaction : 2.9%</p>
+                               
+                          <!--   <p>(2.9% of the transaction fee would
+                                be charged your account)</p> -->
+                            <a href="https://www.payumoney.com/merchant_integration_tnc.html" target="_blank" style="color: #e51385">Payment gateway PayU terms and conditions</a>
                         </div>
+                        
+                        
+                        
                         <div class="col-md-5">
                             <div class="checkbox checkbox-primary">
                                 <input id="checkbox2" type="checkbox" ng-checked="storeCommerce.wantPaymentGateway == 1" name="wantPaymentGateway" ng-model="storeCommerce.wantPaymentGateway" ng-true-value="1"
