--- a/public/app/partials/video_interview_partial.html
+++ b/public/app/partials/video_interview_partial.html
@@ -45,7 +45,7 @@
         
         <div class="col-md-12 no-padding">
         <div class="col-md-4 no-padding">
-            <img ng-src="" src="img/custom_images/WomenShopping/evezown_women3.jpg" class="img-responsive thumbnail" width="100" height="100"/>
+            <img ng-src="" src="img/custom_images/WomenShopping/{{interview.interview_image}}" class="img-responsive thumbnail" width="100" height="100"/>
         </div>
         <div class="col-md-8 no-padding">
             <p style="text-align:justify;font-size:12px;">
