--- a/public/app/partials/video_interview_partial.html
+++ b/public/app/partials/video_interview_partial.html
@@ -32,7 +32,7 @@
         <h4 class="transparent-ribbon text-center" style="color: #e51385;">News</h4>
         <div class="news-section" ng-repeat="newsItem in news">
         <p style="text-align:justify;font-size:12px;">
-            <a href="{{newsItem.link}}" target="blank" style="text-decoration:none;"><b>{{newsItem.title | strLimit:35}}</b></a> - {{newsItem.description | strLimit:120 }}<br>
+            <a href="{{newsItem.link}}" target="blank" style="text-decoration:none;font-size:13px;"><b>{{newsItem.title | strLimit:35}}</b></a> - {{newsItem.description | strLimit:120 }}<br>
         </p>
         </div>
     </div>
@@ -47,7 +47,7 @@
         </div>
         <div class="col-md-8 no-padding">
             <p style="text-align:justify;font-size:12px;">
-                <a href="{{interview.link}}" target="blank" style="text-decoration:none;"><b>{{interview.title | strLimit:25}}</b></a> - {{interview.description | strLimit:120}}<br>
+                <a href="{{interview.link}}" target="blank" style="text-decoration:none;font-size:13px;"><b>{{interview.title | strLimit:25}}</b></a> - {{interview.description | strLimit:120}}<br>
             </p>
         </div>
         </div>
