--- a/public/app/partials/Community/circles.html
+++ b/public/app/partials/Community/circles.html
@@ -43,6 +43,14 @@
     </p>
 </div>
 
+<div class="col-md-12" style="margin-top: 10px;">
+    <ul class="breadcrumb" style="background: transparent; padding-left: 0px" >
+        <li><a href="#home">Home</a> <span class="divider"></span></li>
+        <li><a href="#profile/{{userId}}">Mysite</a></li>
+        <li class="active">Build Community</li>
+    </ul>
+</div>
+
 <div class="col-md-2 user-menu-btns">
     <div class="btn-group-vertical square" id="responsive">
         <a href="#community" class="btn btn-default">
@@ -55,7 +63,7 @@
             <p>Circles</p>
         </a>
         <a href="#friends/invite" class="btn btn-default">
-            <p>Invite Evez</p>
+            <p>Invite People</p>
         </a>
         <a href="#invitehistory" class="btn btn-default">
             <p>Invite History</p>
