--- a/public/app/partials/Community/create-event.html
+++ b/public/app/partials/Community/create-event.html
@@ -38,9 +38,9 @@
      role="alert" ng-controller="ApplicationCtrl">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span>
     </button>
-    <h1>Build Community</h1>
+    <h1>Events</h1>
 
-    <p style="text-align:justify">Build community helps you replicate your existing, offline community online. You can use features like Evez, Circles, Groups, Events, Blogs and Discussions to interact with your community and grow it. These features are linked to WoiceIt, the streaming channel for promotion and propagation. This helps you spread the word better among your community about your activities.
+    <p style="text-align:justify">Create your events – both offline and online here. Use Stream It to broadcast to your community of friends, well-wishers and customers both on Evezown and on other social media sites. This helps you spread the word better among your community about your activities.
     </p>
 </div>
 
