--- a/public/app/partials/description/woice.html
+++ b/public/app/partials/description/woice.html
@@ -4,7 +4,7 @@
     </button>
     <h1>Woice</h1>
 
-    <p style="text-align:justify">This is the content-based community building and promotion platform. You can create your profile in-depth, connect with friends, colleagues, customers, partners, employees or other women you wish to connect with. You can promote yourself or your business digitally within your circles privately or publicly using features of WOICE section such as events, blogs, recco, discussions and groups.
+    <p style="text-align:justify">This is the content-based community building and promotion platform. You can create your profile in-depth, connect with friends, colleagues, customers, partners, employees or other people you wish to connect with. You can promote yourself or your business digitally within your circles privately or publicly using features of WOICE section such as events, blogs, stream it, discussions and groups.
     </p>
     <p>Echo your Woice. Be heard.</p>
     <p>For more visit WOICE FAQs. <a href="#woicefaq"> Click here </a></p>
