--- a/public/app/partials/evezplace/create_browse_partial.html
+++ b/public/app/partials/evezplace/create_browse_partial.html
@@ -5,8 +5,8 @@
              <a ng-if="isProductPlusService" href="#whatdoiget" id="btn-create-store" class="btn btn-block">Create {{storeType}} <span class="fa fa-angle-right fa-2x pull-right"></span></a>
         </div>
         <div class="col-md-3">
-             <a ng-if="!isProductPlusService" href="#store/browse" id="btn-browse-store" class="btn btn-block">Browse Existing {{storeType}}s <span class="fa fa-angle-right fa-2x pull-right"></span></a>
-             <a ng-if="isProductPlusService" href="#store/browse" id="btn-browse-store" class="btn btn-block">Browse {{storeType}}s <span class="fa fa-angle-right fa-2x pull-right"></span></a>
+             <a ng-if="!isProductPlusService" href="#store/browse" id="btn-browse-store" class="btn btn-block">Browse Existing {{storeType}} <span class="fa fa-angle-right fa-2x pull-right"></span></a>
+             <a ng-if="isProductPlusService" href="#store/browse" id="btn-browse-store" class="btn btn-block">Browse {{storeType}} <span class="fa fa-angle-right fa-2x pull-right"></span></a>
         </div>
 
         <div class="col-md-3">
