--- a/public/app/partials/evezplace/whatdoiget.html
+++ b/public/app/partials/evezplace/whatdoiget.html
@@ -4,7 +4,7 @@
 
 <div class="text-center">
     <div class="row">
-        <h4 style="color: #e51385; margin-top: 20px; margin-bottom: 20px">Every <b>Evezown</b> member can claim a <b>Eve-Store</b>
+        <h4 style="color: #e51385; margin-top: 20px; margin-bottom: 20px">Every <b>Evezown</b> member can claim a <b>Store</b>
             comprising of</h4>
     </div>
     <div class="promo-section">
@@ -65,7 +65,7 @@
         </div>
     </div>
     <div class="row" style="padding: 40px 80px">
-        <h4 style="line-height: 1.5">Open a products or services store under any of 5 Categories and 250 plus subcategories. You can promote it through Steam It, Connect related blogs, Forums and Events. Basic Store is free. Paid Standard and Customised stores provide enhanced features helping you to position and market your services.</h4>
+        <h4 style="line-height: 1.5">Open a products store or services store under any of 5 Categories and 250 plus subcategories. You can promote it through Steam It, Connect related blogs, Discussion and Events. Basic Store is free. Paid Standard and Customised stores provide enhanced features helping you to position and market your services.</h4>
     </div>
     <div ng-include src='"partials/evezplace/get_started.html"' ng-controller="StoreInfoController"></div>
 </div>
