--- a/public/app/partials/Community/community.html
+++ b/public/app/partials/Community/community.html
@@ -46,7 +46,7 @@
     </button>
     <h1>Build Community</h1>
 
-    <p style="text-align:justify">Build community helps you replicate your existing, offline community online. You can use features like Evez, Circles, Groups, Events, Blogs and Discussions to interact with your community and grow it. These features are linked to WoiceIt, the streaming channel for promotion and propagation. This helps you spread the word better among your community about your activities.
+    <p style="text-align:justify">Build community helps you replicate your existing, offline community online. You can use features like Connect, Advertise, Circles, Invite People, Invite history. These features are linked to Stream It, the streaming channel for promotion and propagation. This helps you spread the word better among your community about your activities.
     </p>
     <button class="btn btn-lg btn-primary pull-right" ng-click="CallMe();">Take a Tour</button>
 </div>
@@ -72,7 +72,7 @@
             <p>Circles</p>
         </a>
         <a id="step6"  data-toggle="tab" data-slide-to="4" href="#friends/invite" class="btn btn-default">
-            <p>Invite people</p>
+            <p>Invite People</p>
         </a>
         <a id="step6"  data-toggle="tab" data-slide-to="4" href="#invitehistory" class="btn btn-default">
             <p>Invite History</p>
