--- a/public/app/partials/Community/createblog.html
+++ b/public/app/partials/Community/createblog.html
@@ -39,9 +39,9 @@
      role="alert" ng-controller="ApplicationCtrl">
     <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">×</span>
     </button>
-    <h1>Build Community</h1>
+    <h1>Blogs</h1>
 
-    <p style="text-align:justify">Build community helps you replicate your existing, offline community online. You can use features like Evez, Circles, Groups, Events, Blogs and Discussions to interact with your community and grow it. These features are linked to WoiceIt, the streaming channel for promotion and propagation. This helps you spread the word better among your community about your activities.
+    <p style="text-align:justify">Share your thoughts, experiences and musings through our blog platform. Create your blog here and use Stream It to broadcast to your community of friends, well-wishers and customers both on Evezown and on other social media sites.
     </p>
 </div>
 
