--- a/public/app/partials/evezplace/store_info_jumbotron.html
+++ b/public/app/partials/evezplace/store_info_jumbotron.html
@@ -8,7 +8,7 @@
 
             <h1 style="text-transform: uppercase; font-weight: 900">MarketPlace</h1>
 
-            <p>Marketplace for showcasing women centric products and services in 5 key categories</p>
+            <p>Marketplace for showcasing products and business services in 5 key categories</p>
             <ul style="margin-top: 20px; border-radius: 10px ; display:block">
                 <li>Health, Wellness Fitness</li>
                 <li>Food & Nutrition</li>
@@ -33,8 +33,8 @@
 
             <ul style="margin-top: 20px; border-radius: 10px ; display:block">
                 <li>Product Store</li>
-                <li>Services Store</li>
-                <li>Products + Services Store</li>
+                <li>Business Store</li>
+                <li>Store + Business</li>
             </ul>
 
             <a href="#store/create/step1" class="btn btn-primary btn-lg" style="margin-top: 20px; border-radius: 10px">Get
@@ -50,7 +50,7 @@
 
             <h1 style="text-transform: uppercase; font-weight: 900">Marketplace</h1>
 
-            <p>If you are a woman in business, go ahead an open your store. If your business is focused on women as a consumer, contact us. We will help you open a store</p>
+            <p>If you are in business, go ahead an open your store. If your business is focused on women as a consumer, contact us. We will help you open a store</p>
             <a href="#contactus" class="btn btn-primary btn-lg" style="margin-top: 20px; border-radius: 10px;">Contact Us <span class="fa fa-chevron-right"></span></a>
         </div>
         <div class="col-md-4">
