--- a/public/app/partials/admin/Manage/stock_management.html
+++ b/public/app/partials/admin/Manage/stock_management.html
@@ -11,7 +11,7 @@
     </button>
     <h1>Stock Management</h1>
 
-    <p style="text-align:justify;font-size:16px;">You can manage the individual product or services here. You can view individual stock information, edit the price, discounts, size and other dimensions of the product/service.
+    <p style="text-align:justify;font-size:16px;">You can manage the individual product or business here. You can view individual stock information, edit the price, discounts, size and other dimensions of the product/business.
     </p>
 </div>
 <!--Description Ends-->
