--- a/public/app/partials/evezplace/create_store_step6.html
+++ b/public/app/partials/evezplace/create_store_step6.html
@@ -4,7 +4,7 @@
     
         <h1 style="color: #e51385">Step 6</h1>
 
-        <p>Link your Mysite profile to your store. (Recommended) . Upload your price. Select your Recco it preference among the options available</p>
+        <p>Link your Mysite profile to your store. (Recommended) . Upload your price. Select your Stream it preference among the options available</p>
 </div>
 
 <ul class="breadcrumb create-store-breadcrumb">
@@ -27,7 +27,7 @@
                 <label for="linkPersonalProfileToStore">Do you want to link your personal profile to Store
                     profile?</label>
 
-                <p>(If you link it you can exibit your blogs, events and forums alongside your venture, it will help you
+                <p>(If you link it you can exibit your blogs, events and discussion alongside your venture, it will help you
                     create interest in your target audience)</p>
             </div>
             <div class="col-md-4">
@@ -40,20 +40,20 @@
 
     <div class="row">
         <div class="col-md-8 col-md-offset-2">
-            <h5 style="color: #e51385; font-weight: 700; font-size: 1.2em">Recco it</h5>
+            <h5 style="color: #e51385; font-weight: 700; font-size: 1.2em">Stream It</h5>
         </div>
     </div>
 
     <div class="row">
         <div class="col-md-offset-2 col-md-8">
-            <p>Recco it is Evezown's advertising channel, you can promote your stores to larger audience by buying
-                Recco-it subscription. For paid store it comes in built.</p>
+            <p>Stream it is Evezown's advertising channel, you can promote your stores to larger audience by buying
+                Stream-it subscription. For paid store it comes in built.</p>
         </div>
     </div>
 
     <div class="row" style="margin-top: 10px">
         <div class="col-md-offset-2 col-md-8">
-            <label for="linkPersonalProfileToStore">Choose Recco -it subscription (for free stores)</label>
+            <label for="linkPersonalProfileToStore">Choose Stream-it subscription (for free stores)</label>
         </div>
     </div>
 
