--- a/public/app/partials/profile/details/other.html
+++ b/public/app/partials/profile/details/other.html
@@ -172,7 +172,7 @@
                                ng-false-value="0"
                                ng-checked="other.need_wopportunity_listing == 1" ng-model="other.need_wopportunity_listing"/>
                         <label for="listing">
-                            To use listing /classified functionalities available on Jobs section?
+                            To use listing /ads & campaigns functionalities available on Jobs section?
                         </label>
                     </div>
                     <div class="col-xs-12 checkbox checkbox-primary">
