--- a/public/app/partials/profile/details/partnering.html
+++ b/public/app/partials/profile/details/partnering.html
@@ -184,7 +184,7 @@
                                        ng-false-value="0"
                                        ng-checked="partnering.through_forums == 1"/>
                                 <label for="thoughforums">
-                                    Through Forums
+                                    Through Discussion
                                 </label>
                             </li>
                             <li>
@@ -200,7 +200,7 @@
                                        ng-false-value="0"
                                        ng-checked="partnering.through_recco == 1"/>
                                 <label for="thoughrecco">
-                                    Through Recco-it
+                                    Through Stream It
                                 </label>
                             </li>
                             <li>
