--- a/public/app/partials/profile/home.html
+++ b/public/app/partials/profile/home.html
@@ -49,7 +49,7 @@
     <p style="text-align:justify">This is your website on Evezown and captures the essence of your business and
         personality. You can create your profile in-depth, build community to connect with friends, colleagues,
         customers, partners, employees or any one you wish to connect with. You can promote yourself or your
-        business digitally within your circles privately or publicly using features such as events, blogs, stream it, forums
+        business digitally within your circles privately or publicly using features such as events, blogs, stream it, discussion
         and groups.
     </p>
 
