--- a/public/app/partials/admin/albums.html
+++ b/public/app/partials/admin/albums.html
@@ -23,7 +23,7 @@
             </h4>
         </div>
         <div class="col-md-4">
-            <input type="text" class="form-control" placeholder="search albums" ng-model="albumsearch"/>
+            <input type="text" class="form-control" placeholder="search Gallery" ng-model="albumsearch"/>
         </div>
         <div class="col-md-2 col-md-offset-4 pull-right custom-create-album-button">
             <a href ng-click="CreateAlbum()" class="btn btn-primary"><span class="fa fa-plus"></span> Create Gallery</a>
