--- a/public/app/partials/evezplace/manage/store/stock_management.html
+++ b/public/app/partials/evezplace/manage/store/stock_management.html
@@ -11,7 +11,7 @@
     </button>
     <h1>Stock Management</h1>
 
-    <p style="text-align:justify;font-size:16px;">You can manage the individual product or services here. You can view individual stock information, edit the price, discounts, size and other dimensions of the product/service.
+    <p style="text-align:justify;font-size:16px;">You can manage the individual store product or business services here. You can view individual stock information, edit the price, discounts, size and other dimensions of the Store products/Business services.
     </p>
 </div>
 <!--Description Ends-->
@@ -25,7 +25,7 @@
         <div class="col-md-10 col-md-offset-1">
         <div class="row" style="margin-top: 10px">
             <div class="col-sm-3">
-                <h5 style="color: #e51385; font-weight: 600">Products/Services</h5>
+                <h5 style="color: #e51385; font-weight: 600">Stores/Business</h5>
             </div>
             <div class="col-sm-3">
                 <select class="form-control"  id="product-line" id="selectproductLine"
