product upload max size fix
product upload max size fix

--- a/public/app/partials/evezplace/manage/store/product_catalogue.html
+++ b/public/app/partials/evezplace/manage/store/product_catalogue.html
@@ -230,7 +230,7 @@
                         <div class="row" style="margin-top: 15px; margin-bottom: 20px">
                             <div class="form-group">
                                 <div class="col-sm-6">
-                                    <h5 style="font-weight: 600">Product/Service Images</h5>
+                                    <h5 style="font-weight: 600">Product/Service Images<b style="color: #e51385"> (Max Size :2MB)</b></h5>
                                 </div>
                                 <div class="col-sm-6">
                                     <div class="fileUpload btn btn-default btn-block">
