Revert "English change"
This reverts commit e6ee4864515d7ba0d6e1bb8c3762da135de60544.

--- a/public/app/partials/evezplace/store_creation_success.html
+++ b/public/app/partials/evezplace/store_creation_success.html
@@ -15,7 +15,7 @@
     <div class="row">
         <div class="col-md-12" style="padding: 20px 80px">
             <p style="font-weight: 400; font-size: 1.2em">Your store front is complete. We have added buttons to <span
-                    style="color: #e51385; font-weight: 600">Stream It, Comment</span> and <span
+                    style="color: #e51385; font-weight: 600">Woice It, Recco It, Comment</span> and <span
                     style="color: #e51385; font-weight: 600">Grade It</span>, so that you can get feedback from your
                 customers, it helps in promotion too.</p>
         </div>
