Bug fixes and enhancements
1. Invite history - resend invite added, delete with confirmation
enabled.
2. User Registration - validation added while register
3. And few other small bug fixes

--- a/public/app/partials/Community/community.html
+++ b/public/app/partials/Community/community.html
@@ -118,7 +118,7 @@
                             <img ng-src="{{service_url+'image/show/'+friend.profile.profile_image.large_image_url}}"
                                  class="img-thumbnail"/>
                         </div>
-                        <h5>{{friend.profile.firstname}} {{friend.profile.lastname}}</h5>
+                        <h5>{{friend.profile.firstname  | strLimit:12}}<!--  {{friend.profile.lastname | strLimit:6}} --></h5>
                     </center>
                 </a>
             </li>
