--- a/public/app/app.css
+++ b/public/app/app.css
@@ -109,6 +109,11 @@ input[type=number]::-webkit-outer-spin-button {
 
 @media (max-width: 768px) {
 
+    .table {
+        overflow-x: auto;
+        display: block;
+    }
+
     .navbar-default .navbar-toggle {
         margin-top: 40px;
         margin-bottom: 40px;
